--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   </head>
   <body>
-    <script src="scripts/sketch.js"></script>
+    <script src="sketch.js"></script>
     <script src="p5/p5.collide2d.js"></script>
   
 
